--- a/style.css
+++ b/style.css
@@ -76,3 +76,17 @@ input {
 #convert-btn:hover {
     background: rgba(216, 216, 216, 0.575);
 }
+
+#output {
+    margin: 20px auto 15px auto;
+    width: 400px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 0.5rem 0.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.5);
+    min-height: 40px;
+    display: none;
+    font-size: 1.3rem;
+}
